--- a/newwin.html
+++ b/newwin.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
-<br><br><center><p>Hey! You're here because you tested what a malicous new window could do.</p>
+<br><br><center><p>Hey! You're here because you tested what a new window malicious size could leak.</p>
 <p>Close this window and refer back to the results on the main test.</p></center><br><br>
 </body>
 </html>
