--- a/newwin.html
+++ b/newwin.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <br><br><center><p>Hey! You're here because you tested what a new window malicious size could leak.</p>
-<p>Close this window and refer back to the results on the main test.</p></center><br><br>
+<p>Close this and check the results on the main test.</p></center><br><br>
 </body>
 </html>
