--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -305,7 +305,10 @@
 			<code>[sessionStorage]</code> and <code> [indexedDB]</code> tests, on each run, each use a new random name and
 			value, attempt to set them, and then to read the value back. Only when it successfully reads back the value
 			is it deemed to be available and working.</span></td></tr>
-		<tr><td>[navigator] cookieEnabled</td><td id="nCookieEnabled"></td></tr>
+		<tr><td><div>
+				<div class="btn-left"><button class="btn6" onClick="outputSection(`cookies`)">[ re-run tests ]</button></div>
+				<div>[navigator] cookieEnabled</div></div></td><td id="nCookieEnabled"></td>
+		</tr>
 		<tr><td>[test] 1st party cookie</td><td id="cookieTest"></td></tr>
 		<tr><td>localStorage</td><td id="storageLSupport"></td></tr>
 		<tr><td>[test] localStorage</td><td id="storageLTest"></td></tr>
