--- a/extra.html
+++ b/extra.html
@@ -19,7 +19,7 @@
     <col width="37%"><a name="form controls"></a><col width="63%">
     <thead><tr><th colspan="2"><div class="nav-title">widgets / form controls</div></th></tr></thead>
     <tr><td><div>
-        <div class="btn-left"><button class="btn2" onClick="outputSection(`widgets`)">[ re-run tests ]</button></div>
+        <div class="btn-left"><button class="btn2" onClick="outputSection(`2`, `c`, `e`)">[ re-run tests ]</button></div>
         <div>one</div></div></td><td></td></tr>
     <tr><td>two</td><td></td></tr>
     <tr><td colspan="2" class="showhide">
@@ -41,7 +41,7 @@
       releases. This test removed one item, <code>chrome://global/content/minimal-xul.css</code>, for stability purposes on this site.</span>
     </td></tr>
     <tr><td><div>
-        <div class="btn-left"><button class="btn3" id="chromeRun" onClick="outputSection(`chrome`)">[ run tests ]</button></div>
+        <div class="btn-left"><button class="btn3" id="chromeRun" onClick="outputSection(`3`, `c`, `e`)">[ run tests ]</button></div>
         <div>images</div></div></td>
       <td class="mono" id="imgHash"></td></tr>
     <tr><td>js</td><td class="mono" id="jsHash"></td></tr>
@@ -53,7 +53,7 @@
     </td></tr>
     <tr class="togC">
      <td><button class="btn0" onClick="copyclip(`allLoaded`)">[ copy to clipboard ]</button>[alphabetically sorted] all</td>
-     <td id="allLoaded"></td>
+     <td class="c" id="allLoaded"></td>
     </tr>
     <tr class="togC"><td colspan="2"></td></tr>
     <tr><td colspan="2"><span class="no_color">chrome:// code based on work by </span>
