--- a/extra.html
+++ b/extra.html
@@ -44,9 +44,9 @@
         <div class="btn-left"><button class="btn3" id="chromeRun" onClick="outputSection(`3`, `c`, `e`)">[ run tests ]</button></div>
         <div>images</div></div></td>
       <td class="mono" id="imgHash"></td></tr>
-    <tr><td>js</td><td class="mono" id="jsHash"></td></tr>
-    <tr><td>css</td><td class="mono" id="cssHash"></td></tr>
-    <tr><td>combined</td></td><td class="mono" id="allHash"></td></tr>
+    <tr><td>js</td><td class="c mono" id="jsHash"></td></tr>
+    <tr><td>css</td><td class="c mono" id="cssHash"></td></tr>
+    <tr><td>combined</td></td><td class="c mono" id="allHash"></td></tr>
     <tr><td colspan="2" class="showhide">
         <input id="collapseC" class="toggle" type="checkbox" checked onchange="toggleitems(this, `C`)">
         <label for="collapseC" class="lbl-toggle" id="labelC">&#9660; show details</label>
