--- a/extra.html
+++ b/extra.html
@@ -43,7 +43,7 @@
     <tr><td><div>
         <div class="btn-left"><button class="btn3" id="chromeRun" onClick="outputSection(`3`, `c`, `e`)">[ run tests ]</button></div>
         <div>images</div></div></td>
-      <td class="mono" id="imgHash"></td></tr>
+      <td class="c mono" id="imgHash"></td></tr>
     <tr><td>js</td><td class="c mono" id="jsHash"></td></tr>
     <tr><td>css</td><td class="c mono" id="cssHash"></td></tr>
     <tr><td>combined</td></td><td class="c mono" id="allHash"></td></tr>
