--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -24,6 +24,7 @@
 	<iframe id="iframeDTD2" style='position: absolute; top: -2000%;'></iframe>
 	<iframe id="iframeDR" style='position: absolute; top: -2000%;'></iframe>
 	<iframe id="iframeWD" style='position: absolute; top: -1000%;'></iframe>
+	<iframe id="iframeFC" style='position: absolute; top: -1000%;'></iframe>
 	<iframe id="iframeFF" style='position: absolute; top: -1000%;'></iframe>
 	<img width=0 height=0 id="elFS"></img>
 
@@ -489,8 +490,9 @@
 		</td></tr>
 		<tr><td colspan="4"><div>
 				<div class="btn-left"><button class="btn10" onClick="outputSection(`10`, `c1`, `m`)">[ re-run tests ]</button></div>
-				<div>@font-face</div></div></td><td class="c1" colspan="5" id="fontFace"></td>
+				<div>default proportional font</div></div></td><td class="c1" colspan="5" id="fontFCprop"></td>
 		</tr>
+		<tr><td colspan="4">default font sizes</td><td class="c1" colspan="5" id="fontFCsize"></td></tr>
 		<tr><td colspan="4"><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxtx">layout.css.font-loading-api.enabled</span></div>
 			&nbsp css font loading api</td><td class="c1" colspan="5" id="fontCSS"></td></tr>
@@ -659,7 +661,7 @@
 			&nbsp requestIdleCallback</td><td class="c" id="reqIdleCB"></td></tr>
 	</table>
 
-	<br><a name="theend"><br>
+	<br><a name="theend"></a><br>
 
 	<link rel="stylesheet" type="text/css" href="css/window_size.css">
 	<link rel="stylesheet" type="text/css" href="css/screen_size.css">
