superscript attributions, closes #39

--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -81,13 +81,13 @@
 		<tr><td>[scrollY] devicePixelRatio <sup>4</sup></td><td class="c" id="devPRscrollY"></td></tr>
 		<tr><td>[clientRect] devicePixelRatio <sup>4</sup></td><td class="c" id="devPRclientRect"></td></tr>
 		<tr><td colspan="2"><span class="no_color">code based on work by </span>
-			<sup>1</sup><a target="_blank" class="blue" href="https://arthuredelstein.github.io/tordemos/media-query-fingerprint.html">Arthur Edelstein</a>
-			<span class="no_color">,</span>
-			<sup>2</sup> <a target="_blank" class="blue" href="https://matt.traudt.xyz/posts/how-css-alone-YF4ciVY6.html">Matt Traudt</a>
-			<span class="no_color">,</span>
-			<sup>3</sup> <a target="_blank" class="blue" href="https://github.com/earthlng/testpages">earthlng</a>
-			<span class="no_color"> and </span>
-			<sup>4</sup> <a target="_blank" class="blue" href="https://acatarineu.github.io/fp/devicePixelRatio.html">Alex Catarineu</a>
+			<a target="_blank" class="blue" href="https://arthuredelstein.github.io/tordemos/media-query-fingerprint.html">Arthur Edelstein</a>
+			<sup>1</sup><span class="no_color">, </span>
+			<a target="_blank" class="blue" href="https://matt.traudt.xyz/posts/how-css-alone-YF4ciVY6.html">Matt Traudt</a>
+			<sup>2</sup><span class="no_color">, </span>
+			<a target="_blank" class="blue" href="https://github.com/earthlng/testpages">earthlng</a>
+			<sup>3</sup><span class="no_color"> and </span>
+			<a target="_blank" class="blue" href="https://acatarineu.github.io/fp/devicePixelRatio.html">Alex Catarineu</a> <sup>4</sup>
 		</td></tr>
 	</table>
 
@@ -172,11 +172,11 @@
 			<tr class="togE"><td>textarea</td><td class="c" id="wid9"></td></tr>
 			<tr class="togE"><td colspan="2"></td></tr>
 		<tr><td colspan="2"><span class="no_color">code based on work by </span>
-			<sup>1</sup><a target="_blank" class="blue" href="https://arthuredelstein.github.io/tordemos/os-detection-font-css.html">Arthur Edelstein</a>
-			<span class="no_color">, </span>
-			<sup>2</sup> <a target="_blank" class="blue" href="https://www.hackerfactor.com/blog/index.php?/archives/761-Exploiting-the-TOR-Browser.html">Dr. Neal Krawetz</a>
-			<span class="no_color">and </span>
-			<sup>3</sup> <a target="_blank" class="blue" href="https://github.com/earthlng/testpages">earthlng</a></td></tr>
+			<a target="_blank" class="blue" href="https://arthuredelstein.github.io/tordemos/os-detection-font-css.html">Arthur Edelstein</a>
+			<sup>1</sup><span class="no_color"> , </span>
+			<a target="_blank" class="blue" href="https://www.hackerfactor.com/blog/index.php?/archives/761-Exploiting-the-TOR-Browser.html">Dr. Neal Krawetz</a>
+			<sup>2</sup><span class="no_color"> and </span>
+			<a target="_blank" class="blue" href="https://github.com/earthlng/testpages">earthlng</a> <sup>3</sup></td></tr>
 	</table>
 
 	<!-- TABLE 3: Math - part of screen.js-->
@@ -521,11 +521,11 @@
 		<tr class="togF"><td></td><td colspan="8" class="intro" id="fontFBFound"></td></tr>
 		<tr class="togF"><td colspan="9"></td></tr>
 		<tr><td colspan="9"><span class="no_color">code based on work by </span>
-			<sup>1</sup><a target="_blank" class="blue" href="https://github.com/arthuredelstein/tordemos">Arthur Edelstein</a>
-			<span class="no_color">,</span>
-			<sup>2</sup> <a target="_blank" class="blue" href="https://github.com/Valve/fingerprintjs2">fingerprintjs2</a>
-			<span class="no_color"> and </span>
-			<sup>3</sup> <a target="_blank" class="blue" href="https://browserleaks.com/fonts">browserleaks</a>
+			<a target="_blank" class="blue" href="https://github.com/arthuredelstein/tordemos">Arthur Edelstein</a>
+			<sup>1</sup><span class="no_color">, </span>
+			<a target="_blank" class="blue" href="https://github.com/Valve/fingerprintjs2">fingerprintjs2</a>
+			<sup>2</sup><span class="no_color"> and </span>
+			<a target="_blank" class="blue" href="https://browserleaks.com/fonts">browserleaks</a> <sup>3</sup>
 		</td></tr>
 	</table>
 
