--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -519,7 +519,7 @@
 		</tr>
 		<tr><td colspan="4">js <sup>2</sup></td><td class="c2" colspan="5"></td></tr>
 		<tr><td colspan="4">the other js <sup>3</sup></td><td class="c2 mono" colspan="5"></td></tr>
-		<tr><td colspan="4">unicode glyphs <sup>3</sup></td><td class="c2 mono" colspan="5"></td></tr>
+		<tr><td colspan="4">unicode glyphs <sup>4</sup></td><td class="c2 mono" colspan="5"></td></tr>
 		<tr><td colspan="4">canvas</td><td class="c2 mono" colspan="5"></td></tr>
 		<tr><td colspan="9" class="showhide">
 				<input id="collapseF" class="toggle" type="checkbox" checked onchange="toggleitems(this, `F`)">
@@ -533,8 +533,10 @@
 			<a target="_blank" class="blue" href="https://github.com/arthuredelstein/tordemos">Arthur Edelstein</a>
 			<sup>1</sup><span class="no_color">, </span>
 			<a target="_blank" class="blue" href="https://github.com/Valve/fingerprintjs2">fingerprintjs2</a>
-			<sup>2</sup><span class="no_color"> and </span>
-			<a target="_blank" class="blue" href="https://browserleaks.com/fonts">browserleaks</a> <sup>3</sup>
+			<sup>2</sup><span class="no_color">, </span>
+			<a target="_blank" class="blue" href="https://browserleaks.com/fonts">browserleaks</a>
+			<sup>3</sup><span class="no_color"> and </span>
+			<a target="_blank" class="blue" href="https://www.bamsoftware.com/talks/fc15-fontfp/fontfp.html#demo">David Fifield & Serge Egelman</a> <sup>4</sup>
 		</td></tr>
 	</table>
 
