--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -493,8 +493,8 @@
 				<div class="nav-down"><a href="#audio">&#9660;</a></div></div>
 		</th></tr></thead>
 		<tr><td colspan="3" class="intro"><span class="no_color">The real world strikes a balance between efficiency vs
-			entropy [<a target="_blank" class="blue" href="https://valve.github.io/fingerprintjs2/">fingerprintjs2</a> checks 64 fonts by
-			default], but these tests are designed to be comprehensive, not small and fast. As such, some tests are not automatically run.</span>
+			entropy [fingerprintjs2 checks 64 fonts by default], but these tests are designed to be comprehensive, not
+			small and fast. As such, some tests are not automatically run.</span>
 		</td></tr>
 		<tr><td colspan="2"><div>
 				<div class="btn-left"><button class="btn10" onClick="outputSection(`10`, `c1`, `m`)">[ re-run tests ]</button></div>
