remove inline-block

--- a/iframes/unicodeglyphs.html
+++ b/iframes/unicodeglyphs.html
@@ -18,10 +18,9 @@
   word-spacing: normal;
 }
 #ugSpan {font-size: 10000%;}
-.boxed {display: inline-block;}
 </style>
 </head>
 <body>
-<div id="ugDiv" class="normalized"><span id="ugSpan" class="boxed"><span id="ugSlot"></span></span></div>
+<div id="ugDiv" class="normalized"><span id="ugSpan"><span id="ugSlot"></span></span></div>
 </body>
 </html>
