--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -321,7 +321,7 @@
 				<div class="btn-left"><button class="btn6" onClick="outputSection(`6`, `c`, `m`)">[ re-run tests ]</button></div>
 				<div>[navigator] cookieEnabled</div></div></td><td class="c" id="nCookieEnabled"></td>
 		</tr>
-		<tr><td>[test] 1st party cookie</td><td class="c" id="cookieTest"></td></tr>
+		<tr><td>[test] 1st party cookie</td><td class="c" id="cTest"></td></tr>
 		<tr><td>localStorage</td><td class="c" id="storageLSupport"></td></tr>
 		<tr><td>[test] localStorage</td><td class="c" id="storageLTest"></td></tr>
 		<tr><td>sessionStorage</td><td class="c" id="storageSSupport"></td></tr>
